[package]
name = "divide-conquer-processor"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["TETSUROU KIZAKI <trkizaki.web@gmail.com>"]
description = "High-performance divide and conquer algorithms for large-scale data processing"
repository = "https://github.com/TRkizaki/divide-conquer-processor"

[dependencies]

rayon = "1.8"

criterion = { version = "0.6.0", features = ["html_reports"] }

rand = "0.9.1"

statistical = "1.0"

memory-stats = "1.1"

clap = { version = "4.4", features = ["derive"] }

plotters = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

colored = "3.0"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
